# Terramechanics

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: angle.hpp  bevameter.hpp  intdiff.hpp  shear.hpp  vane.hpp  wheel_soil.hpp
src/: angle.cpp  bevameter.cpp  intdiff.cpp  pyterramechanics.cpp  shear.cpp  strength.cpp  vane.cpp  wheel_soil.cpp
