cmake_minimum_required(VERSION 2.8)
project(terramechanics)
add_subdirectory(lib)
add_subdirectory(src)
add_subdirectory(bin)
add_subdirectory(include)
INCLUDE_DIRECTORIES("${CMAKE_BINARY_DIR}/include")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_CXX_FLAGS "-std=c++11 -Wall")

add_library(terramecha STATIC src/bevameter.cpp src/shear.cpp src/angle.cpp src/wheel_soil.cpp)
add_library(terramecha-share SHARED src/bevameter.cpp src/shear.cpp src/angle.cpp src/wheel_soil.cpp)
set_target_properties(terramecha-share PROPERTIES COMPILE_FLAGS "-DPIC")
